--- a/CValexsite/cvsitealexcss.css
+++ b/CValexsite/cvsitealexcss.css
@@ -71,9 +71,10 @@ li
   border-radius: 50%;
   margin-top: 50px;
   overflow:hidden;
-  width: 150px;
-  height: 140px;
+  width: 230px;
+  height: 220px;
   margin: auto;
+  margin-top: 35PX;
   background: url("photocvmini.jpg");
       background-position-x: 0%;
       background-position-y: 0%;
@@ -90,7 +91,7 @@ li
 
 .partiegauche
 { 
-    width: 27%;
+    width: 30%;
     border:1px none gray;
     color:rgb(92, 88, 88);
     background:#FFCA28;
