--- a/CValexsite/cvsitealexcss.css
+++ b/CValexsite/cvsitealexcss.css
@@ -113,6 +113,8 @@ li
     font-family: Arial, Helvetica, sans-serif;
     
 }
+
+
 .h4text 
  { 
      margin-left: 40px;
@@ -138,6 +140,26 @@ li
     text-align: center;
 }
 
+#texth2 
+{  
+    
+
+    font-size:1.4em;
+    color:rgb(92, 88, 88);
+    border: #FFCA28 1px none;
+}
+
+.html, .java, .node, .mongodb, .express, .langage, .vuejs
+{  
+    border: #FFCA28 1px none;
+    margin-top: 5PX;
+}
+
+.langage
+{  
+    font-family: Arial, Helvetica, sans-serif;
+    color: black;
+}
 @media all and (max-width: 930px)
 { 
     #sectionnav
