--- a/CValexsite/cvsitealexcss.css
+++ b/CValexsite/cvsitealexcss.css
@@ -18,7 +18,7 @@ h1
 { 
     border:1px white none;
     text-aligN: left;
-    margin: 30px;
+    
     
     
     
@@ -36,14 +36,14 @@ h1
 
 section
 {  
-    padding: 0 95px 0 95px;
+    padding: 0 95px 0 85px;
 }
 
 section h2
 { 
     border-bottom: 2PX #FFCA28 solid ;
     text-align: left;
-    width: 100%;
+    width: 840px;
      
     font-size: 1.5em;
     font-family: Arial, Helvetica, sans-serif;
@@ -304,11 +304,11 @@ section h2
 
 .textexper
 {  
-    width: 500PX;
-    borde: #FFCA28 solid 1px;
+    width: 620PX;
+    
     margin-top: PX;
     text-align: justify;
-    margin-left: 10PX;
+    margin-left: 15PX;
     font-size: 1.3em;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -358,5 +358,28 @@ section h2
      
  }
 
+ .html, .java, .node, .mongodb, .express, .langage, .vuejs
+ {  
+     margin-left: 74px;
+ }
+}
+ @media all and (max-width:1320px)
+{  
+ .textexper
+ {  
+     
+     width: 450px;
+     
+     
+ }
+
 }
 
+@media all and (max-width:950px)
+{  
+.textexper
+{  
+    width: 300px;
+}
+
+}  
