--- a/CValexsite/cvsitealexcss.css
+++ b/CValexsite/cvsitealexcss.css
@@ -4,6 +4,22 @@
     color: #FFCA28;
     
 }
+
+.ammeil
+{   
+   display: flex;
+   flex-direction: row;
+
+}
+
+.nom
+{  
+    font-siz: 3em;
+    margin-left: 20px;
+}
+
+
+
 body
 {   
     margin:0;
@@ -27,11 +43,21 @@ h1
 { 
     font-size: 1.4em;
     color: rgb(77, 74, 74);
+    margin-bottom: 100px;
+    display: flex;
+    flex-direction: row;
+    height: 70px;
 }
-.am
+
+
+
+.ammeil
 { 
+    height: 120px;
     font-size: 3em;
-    font-family: Verd;
+    
+    borde: #FFCA28 solid 1px;
+    
 }
 
 section
@@ -43,7 +69,7 @@ section h2
 { 
     border-bottom: 2PX #FFCA28 solid ;
     text-align: left;
-    width: 840px;
+    width: 740px;
      
     font-size: 1.5em;
     font-family: Arial, Helvetica, sans-serif;
@@ -275,6 +301,13 @@ section h2
     
 }
 
+.toutedate
+{   
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 20px;
+}
+
 .textedate
 {  
     width:170PX;
@@ -283,30 +316,41 @@ section h2
     margin-top: 3PX;
     display: flex;
     flex-direction: column;
+    
     font-size: 1.2 em;
     
 }
 
 .iconeexperiencepro
 {    
-    borde: #FFCA28 solid 1px;
+    border: #FFCA28 solid 1px;
     width:auto;
     
+    
     align-self: flex-start;
-    margin-lef: 50PX;
+    
     color: #FFCA28;
 }
-.nice
+.nicolas
 {   
-    orde: 1;
+    color:rgb(92, 88, 88);
+    font-size: 1.4 em;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-bottom: 10px;
+}
+
+.directeur, .telephone
+{   
+    color:rgb(92, 88, 88);
+    font-size: 1.2 em;
 
 }
 
 .textexper
 {  
-    width: 620PX;
+    width: 530PX;
     
-    margin-top: PX;
+    
     text-align: justify;
     margin-left: 15PX;
     font-size: 1.3em;
@@ -320,7 +364,7 @@ section h2
 
 }
 
-@media all and (max-width: 830px)
+@media all and (max-width: 1060px)
 { 
     #toutelessections
     { 
@@ -339,6 +383,11 @@ section h2
 }  
 @media all and (max-width:1050px)
 {   
+.section
+{  
+    text-align: left;
+}
+
  section h2
  {   
      width: auto;
@@ -347,7 +396,7 @@ section h2
 
      
  }
- .opendev
+ opendev
  {  
      margin-left: 15px;
  }
@@ -360,26 +409,66 @@ section h2
 
  .html, .java, .node, .mongodb, .express, .langage, .vuejs
  {  
-     margin-left: 74px;
+    text-align: left;
  }
 }
- @media all and (max-width:1320px)
+ @media all and (max-width:780px)
 {  
- .textexper
+.textexperiencepro
  {  
+    display: flex;
+    flex-direction: column;
      
-     width: 450px;
      
      
  }
 
 }
 
-@media all and (max-width:950px)
+@media all and (max-width:1240px)
 {  
-.textexper
+.textexperiencepro
 {  
-    width: 300px;
+    display: flex;
+    flex-direction: column;
+    
+    
 }
 
 }  
+
+@media all and (max-width:1200px)
+{  
+.ammeil
+{  
+   display: flex;
+   flex-direction: column;
+   
+}  
+
+.soustitre
+{  
+    margin-top: 90px;
+    borde: #FFCA28 solid 1px;
+}
+
+.amsoustitre
+{   
+    text-align: left;
+}
+
+.nom
+{  
+    
+    margin-top: 20px;
+    margin-left: 0;
+    text-align: left;
+    
+}
+
+.prenomj
+{  
+    height: 60px;
+}
+
+} 
