--- a/CValexsite/cvsitealexcss.css
+++ b/CValexsite/cvsitealexcss.css
@@ -18,8 +18,6 @@
     margin-left: 20px;
 }
 
-
-
 body
 {   
     margin:0;
@@ -34,10 +32,6 @@ h1
 { 
     border:1px white none;
     text-aligN: left;
-    
-    
-    
-    
 }
 .soustitre
 { 
@@ -55,9 +49,6 @@ h1
 { 
     height: 120px;
     font-size: 3em;
-    
-    borde: #FFCA28 solid 1px;
-    
 }
 
 section
@@ -80,7 +71,6 @@ section h2
 #texth2 
 {  
     
-    
     font-size:1.4em;
     color:rgb(92, 88, 88);
     border: #FFCA28 1px none;
@@ -89,14 +79,11 @@ section h2
 
 .h2text
 {  
-    
-    
     margin-left:30px ;
 }
 
 .devh3
 {   
-    margin-lef: 300PX;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.5em;
     color: rgb(92, 88, 88);
@@ -106,11 +93,13 @@ section h2
 {  
     color: #FFCA28;
     width: 30px;
-    margin-lef: 10PX;
     font-size: 1.5em;
 }
 
-
+.recommandations
+{  
+    margin-bottom: 50px;
+}
 
 #photocv
 { 
@@ -130,6 +119,7 @@ section h2
   background-size: cover;
   background-position: center;
 }
+
 .partiegauche 
 {
   color: rgb(92, 88, 88);
@@ -149,9 +139,6 @@ section h2
     text-align: left;
 } 
 
-
-
-
 .partiegauche h2
 { 
     border:1px gray solid;
@@ -161,7 +148,6 @@ section h2
     color: #FFCA28;
     font-size: 1.3em;
     font-family: Arial, Helvetica, sans-serif;
-    
 }
 
 .touteslesicone
@@ -171,7 +157,6 @@ section h2
     display: flex;
     flex-direction: row;
     padding: 10px 40px 0 0;
-    
 }
 
 .nage, .altère, .livre 
@@ -185,11 +170,7 @@ section h2
     text-align: center;
     margin-left: 55PX;
     margin-bottom: 50PX;
-
-    
-
 }
-
 
 .contacttext 
  { 
@@ -203,8 +184,6 @@ section h2
     text-align: justify;
 }
 
-
-
 #toutelessections
 { 
     
@@ -213,8 +192,6 @@ section h2
     display:flex;
     flex-direction: row-reverse;
     justify-content: left;
-    
-    
 }
 
 .datenice
@@ -225,7 +202,6 @@ section h2
       display: flex;
       flex-direction: column;
       font-size: 1.2em;
-    
 }
 
 .dateopen
@@ -233,17 +209,13 @@ section h2
     margin-top: 35PX;
     display: flex;
     flex-direction: row;
-    
-    
 }
 
 .icone
 {   
     width: 7PX;
     align-self: flex-start;
-    margin-lef: 95PX;
     color: #FFCA28;
-    
 }
 
 .opendev
@@ -265,9 +237,7 @@ section h2
     width: 300PX;
     margin-left: 30PX;
     font-size: 1.3em;
-    
 }
-
 
 .html, .java, .node, .mongodb, .express, .langage, .vuejs
 {  
@@ -297,8 +267,6 @@ section h2
 {  
     width: auto;
     display: flex;
-    
-    
 }
 
 .toutedate
@@ -311,46 +279,38 @@ section h2
 .textedate
 {  
     width:170PX;
-    
     margin-left: 10px;
     margin-top: 3PX;
     display: flex;
     flex-direction: column;
-    
     font-size: 1.2 em;
-    
 }
 
 .iconeexperiencepro
 {    
     border: #FFCA28 solid 1px;
     width:auto;
-    
-    
     align-self: flex-start;
-    
     color: #FFCA28;
 }
+
 .nicolas
 {   
-    color:rgb(92, 88, 88);
-    font-size: 1.4 em;
+    color:rgb(43, 41, 41);
+    font-size: 1.5 em;
     font-family: Arial, Helvetica, sans-serif;
     margin-bottom: 10px;
 }
 
-.directeur, .telephone
+.directeur, .telephone, .email
 {   
     color:rgb(92, 88, 88);
-    font-size: 1.2 em;
-
+    font-size: 1.3 em;
 }
 
 .textexper
 {  
     width: 530PX;
-    
-    
     text-align: justify;
     margin-left: 15PX;
     font-size: 1.3em;
@@ -361,80 +321,17 @@ section h2
 {   
     display: flex;
     flex-direction: column;
-
-}
-
-@media all and (max-width: 1060px)
-{ 
-    #toutelessections
-    { 
-        
-        flex-direction: column;
-        
-        width: auto;
-    }  
     
- .partiegauche
- { 
-     width: auto;
-     
-     
- } 
-}  
-@media all and (max-width:1050px)
-{   
-.section
-{  
-    text-align: left;
-}
-
- section h2
- {   
-     width: auto;
-     margin-left: 70px;
-     
-
-     
- }
- opendev
- {  
-     margin-left: 15px;
- }
-
- .devh3
- {   
-     margin: auto;
-     
- }
-
- .html, .java, .node, .mongodb, .express, .langage, .vuejs
- {  
-    text-align: left;
- }
-}
- @media all and (max-width:780px)
-{  
-.textexperiencepro
- {  
-    display: flex;
-    flex-direction: column;
-     
-     
-     
- }
-
 }
 
 @media all and (max-width:1240px)
 {  
-.textexperiencepro
-{  
-    display: flex;
-    flex-direction: column;
+    .textexperiencepro
+    {  
+        display: flex;
+        flex-direction: column;
+    }
     
-    
-}
-
 }  
 
 @media all and (max-width:1200px)
@@ -443,18 +340,12 @@ section h2
 {  
    display: flex;
    flex-direction: column;
-   
 }  
 
 .soustitre
 {  
     margin-top: 90px;
-    borde: #FFCA28 solid 1px;
-}
-
-.amsoustitre
-{   
-    text-align: left;
+    
 }
 
 .nom
@@ -463,12 +354,99 @@ section h2
     margin-top: 20px;
     margin-left: 0;
     text-align: left;
-    
 }
 
 .prenomj
 {  
     height: 60px;
 }
-
 } 
+
+@media all and (max-width: 1060px)
+{ 
+
+.partiegauche
+{  
+    width: 100%;
+}    
+
+#toutelessections
+{ 
+    
+     display: flex;
+     flex-direction: column;
+     
+}  
+    
+.touteslesicone 
+{  
+    borde:black solid 1px;
+    text-align: justify;
+    margin-left:300px;
+    
+}
+
+}  
+@media all and (max-width:1050px)
+{   
+    .section
+{  
+    text-align: left;
+}
+
+section h2
+ {   
+     width: auto;
+     margin-left: 70px;
+     
+
+     
+    }
+ opendev
+ {  
+     margin-left: 15px;
+    }
+    
+ .devh3
+ {   
+     margin: auto;
+     
+ }
+ 
+ .html, .java, .node, .mongodb, .express, .langage, .vuejs
+ {  
+     text-align: left;
+ }
+}
+
+@media all and (max-width:780px)
+{  
+    .textexperiencepro
+ {  
+    display: flex;
+    flex-direction: column;
+}
+.touteslesicone
+{  
+    margin-left: 150px;
+}
+}
+
+@media all and (max-width:650px)
+{  
+.textexper
+{  
+width: 400px;
+}
+}
+
+@media all and (max-width:580px)
+{
+.touteslesicone
+{  
+   margin-left: 90px;
+
+}
+
+}
+
