--- a/CValexsite/cvsitealexcss.css
+++ b/CValexsite/cvsitealexcss.css
@@ -68,7 +68,20 @@ section h2
     padding-bottom: 14px;
 }
 
-#texth2 
+.faststories
+{  
+    font-size: 1.3em;
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.devweb
+{   
+    font-size: 1.3;
+    color:rgb(77, 74, 74) ;
+}
+
+#texth2
 {  
     
     font-size:1.4em;
@@ -95,11 +108,20 @@ section h2
     width: 30px;
     font-size: 1.5em;
 }
+.allrecommandations
+{  
+   display: flex;
+   flex-direction: row; 
+   justify-content: space-around;
+}
 
 .recommandations
 {  
     margin-bottom: 50px;
 }
+
+
+
 
 #photocv
 { 
@@ -125,6 +147,7 @@ section h2
   color: rgb(92, 88, 88);
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.4em;
+  
   
 }
 
@@ -191,7 +214,7 @@ section h2
     width:auto;
     display:flex;
     flex-direction: row-reverse;
-    justify-content: left;
+    justify-content: center;
 }
 
 .datenice
@@ -223,6 +246,11 @@ section h2
     margin-left: 146PX;
 }
 
+.dateopen2
+{   
+    margin-to: 20px;
+}
+
 .dev
 {    
     width: 11PX;
@@ -236,10 +264,12 @@ section h2
 {    
     width: 300PX;
     margin-left: 30PX;
-    font-size: 1.3em;
+    font-size: 1.4em;
+    font-family: Arial, Helvetica, sans-serif;
+    color: black;
 }
 
-.html, .java, .node, .mongodb, .express, .langage, .vuejs
+.html, .java, .node, .mongodb, .express, .langage, .vuejs,.textcompetence, .competence
 {  
     border: #FFCA28 1px none;
     margin-top: 5PX;
@@ -247,7 +277,7 @@ section h2
     margin-left: 210PX;
 }
 
-.langage
+.langage, .competence
 {  
     font-family: Arial, Helvetica, sans-serif;
     color: black;
@@ -360,6 +390,21 @@ section h2
 {  
     height: 60px;
 }
+#texth2
+{   
+    width: 700px;
+}
+
+.opendev
+{  
+    margin-left: 20px;
+}
+
+.html, .java, .node, .mongodb, .express, .langage, .vuejs, .textcompetence, .competence
+{  
+    margin-left: 80px;
+}
+
 } 
 
 @media all and (max-width: 1060px)
@@ -380,7 +425,7 @@ section h2
     
 .touteslesicone 
 {  
-    borde:black solid 1px;
+    
     text-align: justify;
     margin-left:300px;
     
@@ -413,11 +458,21 @@ section h2
      
  }
  
- .html, .java, .node, .mongodb, .express, .langage, .vuejs
+ .html, .java, .node, .mongodb, .express, .langage, .vuejs, .textcompetence, .competence
  {  
      text-align: left;
  }
 }
+
+@media all and (max-width:820px)
+{
+.textcompetence
+{ 
+    width: 500px;
+}
+
+}
+
 
 @media all and (max-width:780px)
 {  
@@ -426,10 +481,23 @@ section h2
     display: flex;
     flex-direction: column;
 }
+
+.toutedate
+{  
+    margin-top: 30px;
+}
+
 .touteslesicone
 {  
     margin-left: 150px;
 }
+.textcompetence
+{ 
+    width: 300px;
+}
+
+
+
 }
 
 @media all and (max-width:650px)
@@ -438,6 +506,21 @@ section h2
 {  
 width: 400px;
 }
+
+.allrecommandations
+{  
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.textcompetence
+{ 
+    width: 200px;
+    margin-bottom: 30px;
+}
+
+
 }
 
 @media all and (max-width:580px)
@@ -447,6 +530,71 @@ width: 400px;
    margin-left: 90px;
 
 }
+}
+
+@media all and (max-width:510px)
+{  
+.textexper    
+{   
+   width: 300px;
+}
+
+section h2
+{   
+    width: auto;
+    margin: 0px;
+
+}
+#texth2
+{ 
+    width: 600px;
+}
+.touteslesicone
+{  
+    margin-left: 50px;
+}
 
 }
 
+@media all and (max-width:470px)
+{   
+.ammeil
+{  
+    margin-right0px;
+}
+.open
+{  
+    width: 120px;
+}
+
+}
+@media all and (max-width:470px)
+{  
+    .competence
+    {  
+        width: 100px;
+    }
+
+  .textexper
+  {  
+      width: 250px;
+  } 
+  .opendev
+  {  
+      margin-left: 10px;
+  } 
+  .html, .java, .node, .mongodb, .express, .langage, .vuejs, .textcompetence, .competence
+  {  
+    margin-left: 70px;
+  }
+  .amsoustitre
+  {  
+      width: 100px;
+  }
+  .touteslesicone
+  {  
+      margin-left: 0px;
+  }
+
+
+}
