--- a/CValexsite/cvsitealexcss.css
+++ b/CValexsite/cvsitealexcss.css
@@ -51,21 +51,32 @@ h1
     font-size: 3em;
 }
 
+.section
+{  
+    width: 900px;
+}
+
 section
 {  
     padding: 0 95px 0 85px;
+    
 }
 
 section h2
 { 
     border-bottom: 2PX #FFCA28 solid ;
     text-align: left;
-    width: 740px;
+    width: 720px;
      
     font-size: 1.5em;
     font-family: Arial, Helvetica, sans-serif;
     margin-top: 19%;
     padding-bottom: 14px;
+}
+.opendevtexth2
+{  
+    display: flex;
+    flex-direction: column;
 }
 
 .faststories
@@ -77,11 +88,11 @@ section h2
 
 .devweb
 {   
-    font-size: 1.3;
+    font-size: 1.3em;
     color:rgb(77, 74, 74) ;
 }
 
-#texth2
+#texth2, #texth2conpetences
 {  
     
     font-size:1.4em;
@@ -154,15 +165,18 @@ section h2
 
 .partiegauche
 { 
-    width: 430PX;
+    width: 363px;
     border:1px none gray;
     color:rgb(92, 88, 88);
     background:#FFCA28;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.4em;
     text-align: left;
+    display: flex;
+    flex-direction: column;
     
 } 
+
 
 .partiegauche h2
 { 
@@ -194,7 +208,9 @@ section h2
     border:rgb(68, 67, 67) 2PX solid ;
     margin: auto;
     text-align: center;
-    
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-bottom: 20PX;
 }
 
@@ -208,7 +224,7 @@ section h2
     margin-left: 30px;
     margin-right: 30px;
     text-align: justify;
-    
+    flex-grow: 1;
 }
 
 #toutelessections
@@ -270,7 +286,7 @@ section h2
     color: black;
 }
 
-.html, .java, .node, .mongodb, .express, .langage, .vuejs,.textcompetence, .competence
+.html, .java, .node, .mongodb, .express, .langage, .vuejs,.textcompetence, .competence 
 {  
     border: #FFCA28 1px none;
     margin-top: 5PX;
@@ -278,11 +294,25 @@ section h2
     margin-left: 210PX;
 }
 
-.langage, .competence
+.competence2, .textcompetence2
+{  
+    border: #FFCA28 1px none;
+    margin-top: 5PX;
+    text-align: justify;
+    margin-left: 175PX;
+
+}
+
+.langage, .competence, .competence2
 {  
     font-family: Arial, Helvetica, sans-serif;
     color: black;
     margin-top: 30PX;
+}
+competence2, textcompetence2
+{  
+    margin-left: 50PX;
+    width: 470;
 }
 
 .diviconedate
@@ -298,6 +328,11 @@ section h2
 {  
     width: auto;
     display: flex;
+}
+
+.textcompetence
+{  
+    width: 470px;
 }
 
 .toutedate
@@ -363,10 +398,7 @@ section h2
         flex-direction: column;
     }
 
-ection
-{  
-    width: 100%;
-} 
+
     
 }  
 
@@ -396,9 +428,20 @@ ection
 {  
     height: 60px;
 }
-#texth2
+#texth2, #texth2conpetences
 {   
-    width: 700px;
+    width: 400px;
+}
+
+.competence2, .textcompetence2
+{  
+    margin-left: 40PX;
+    width: 470;
+}
+
+#texth2conpetences
+{ 
+
 }
 
 .opendev
@@ -416,10 +459,7 @@ ection
 @media all and (max-width: 1060px)
 { 
 
-.partiegauche
-{  
-    width: 100%;
-}    
+
 
 #toutelessections
 { 
@@ -440,12 +480,16 @@ ection
 }  
 @media all and (max-width:1050px)
 {   
-  
+
+.partiegauche
+{ 
+    width: 100%;
+}    
 
 section h2
  {   
      width: auto;
-     margin-left: 70px;
+     margin-left: 50px;
      
 
      
@@ -530,16 +574,30 @@ width: 400px;
 {  
     display: flex;
     flex-direction: column;
-    text-align: center;
+    text-align: left;
+    margin-left: 20px;
+
 }
 
-.textcompetence
+.textcompetence, .textcompetence2
+{  
+    margin-left: 50PX;
+    width: 470;
+}
 { 
     width: 400px;
     margin-bottom: 30px;
 }
 
+.textcompetence2
+{ 
+   width: 340px;
 
+}
+.h2text
+{ 
+    width: 150px;
+}
 }
 
 @media all and (max-width:580px)
@@ -561,6 +619,7 @@ width: 400px;
 
 @media all and (max-width:510px)
 {  
+    
 .textexper    
 {   
    width: 400px;
@@ -573,6 +632,7 @@ width: 400px;
 { 
     width: 400px;
 }
+
 .recommandations
 { 
     margin-top: 20px;
@@ -582,11 +642,11 @@ width: 400px;
 
 section h2
 {   
-    width: auto;
-    margin: 0px;
+    width: 210px;
+    margin: 50px;
 
 }
-#texth2
+#texth2, #texth2conpetences
 { 
     width: 100%;
 }
@@ -594,6 +654,8 @@ section h2
 {  
     margin-left: 50px;
 }
+
+
 
 }
 
@@ -626,8 +688,10 @@ section h2
       width: 350px;
   }
   
-
-
+  .textcompetence2
+{   
+    width: 220px;
+}
 
   .opendev
   {  
@@ -641,7 +705,7 @@ section h2
   {  
       padding: 0%;
       margin: 0;
-      font-size: 2.5;
+      font-size: 0.9em;
   }
   .touteslesicone
   {  
@@ -667,4 +731,10 @@ section h2
 { 
     width: 245px;
 }
+
+.soustitre
+{  
+    width: 250px;
+}
+
 }
