--- a/CValexsite/cvsitealexcss.css
+++ b/CValexsite/cvsitealexcss.css
@@ -439,7 +439,7 @@ section
 .competence2, .textcompetence2
 {  
     margin-left: 40PX;
-    width: 470;
+    width: 470px;
 }
 
 section
@@ -546,7 +546,7 @@ section h2
  {  
     display: flex;
     flex-direction: column;
-    widt: 500px;
+    width: 500px;
 }
 
 .toutedate
@@ -560,11 +560,11 @@ section h2
 }
 .textcompetence
 { 
-    widt: 500px;
+    width: 500px;
 }
 .textexper
 {  
-    widt: 500px;
+    width: 500px;
 }
 
 
@@ -575,7 +575,7 @@ section h2
 {  
 .textexper
 {  
-widt: 400px;
+width: 400px;
 }
 
 .allrecommandations
@@ -590,10 +590,10 @@ widt: 400px;
 .textcompetence, .textcompetence2
 {  
     margin-left: 50PX;
-    widt: 470;
+    width: 470;
 }
 { 
-    widt: 400px;
+    width: 400px;
     margin-bottom: 30px;
 }
 
@@ -615,7 +615,12 @@ widt: 400px;
         
         padding: 5px;
     }
-
+    .competence2, .textcompetence2
+    {  
+        margin-left: 40PX;
+        width: 320px;
+    }
+    
 
 
 
@@ -624,15 +629,15 @@ widt: 400px;
 @media all and (max-width:510px)
 {  
     
-textexper    
+.textexper    
 {   
    width: 400px;
 }
-textcompetence
+.textcompetence
 { 
     width: 400px;
 }
-textexperiencepro
+.textexperiencepro
 { 
     width: 400px;
 }
