--- a/CValexsite/cvsitealexcss.css
+++ b/CValexsite/cvsitealexcss.css
@@ -5,7 +5,7 @@
     
 }
 
-.ammeil
+.nomprenom
 {   
    display: flex;
    flex-direction: row;
@@ -35,7 +35,7 @@ h1
 }
 .soustitre
 { 
-    font-size: 1.4em;
+    font-size: 1.2em;
     color: rgb(77, 74, 74);
     margin-bottom: 100px;
     display: flex;
@@ -45,10 +45,10 @@ h1
 
 
 
-.ammeil
+.nomprenom
 { 
     height: 120px;
-    font-size: 3em;
+    font-size: 2.5em;
 }
 
 .section
@@ -56,7 +56,7 @@ h1
     width: 900px;
 }
 
-section
+section, header
 {  
     padding: 0 95px 0 85px;
     
@@ -73,20 +73,20 @@ section h2
     margin-top: 19%;
     padding-bottom: 14px;
 }
-.opendevtexth2
+.formationcompetence
 {  
     display: flex;
     flex-direction: column;
 }
 
-.faststories
+.formationtitre
 {  
     font-size: 1.3em;
     color: black;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.devweb
+.formationsoutitre
 {   
     font-size: 1.3em;
     color:rgb(77, 74, 74) ;
@@ -95,16 +95,11 @@ section h2
 #texth2, #texth2conpetences
 {  
     
-    font-size:1.4em;
+    font-size:1.2em;
+    font-family: Arial, Helvetica, sans-serif;
     color:rgb(92, 88, 88);
     border: #FFCA28 1px none;
 }
-.datetitretext
-{  
-
-}
-
-
 
 .devh3
 {   
@@ -165,7 +160,7 @@ section h2
 
 .partiegauche
 { 
-    width: 363px;
+    width: auto;
     border:1px none gray;
     color:rgb(92, 88, 88);
     background:#FFCA28;
@@ -240,14 +235,15 @@ section h2
 .datenice
 {   
       
-      width: 5PX;
+      
       margin-left: 20px;
       display: flex;
       flex-direction: column;
       font-size: 1.2em;
+      width: 180px;
 }
 
-.dateopen
+.divdateemploicompetence
 {  
     margin-top: 45PX;
     display: flex;
@@ -261,27 +257,23 @@ section h2
     color: #FFCA28;
 }
 
-.opendev
+
+
+
+
+.formationsoutitre
 {    
-    margin-left: 146PX;
-}
-
-
-
-.dev
-{    
-    width: 11PX;
-     margin-left: 42PX;
+    
+     
      font-size: 1.2em;
-     margin-left: 32PX;
+     
      color:rgb(92, 88, 88);
 }
 
-.open 
+.formationtitre 
 {    
-    width: 300PX;
-    margin-left: 30PX;
-    font-size: 1.4em;
+    
+    font-size: 1.2em;
     font-family: Arial, Helvetica, sans-serif;
     color: black;
 }
@@ -291,7 +283,7 @@ section h2
     border: #FFCA28 1px none;
     margin-top: 5PX;
     text-align: justify;
-    margin-left: 178px;
+    
 }
 
 .competence2, .textcompetence2
@@ -299,7 +291,7 @@ section h2
     border: #FFCA28 1px none;
     margin-top: 5PX;
     text-align: justify;
-    margin-left: 175PX;
+    
 
 }
 
@@ -371,16 +363,16 @@ section h2
     font-size: 1.3 em;
 }
 
-.textexper
+.formationcompetence
 {  
     width: 530PX;
     text-align: justify;
-    margin-left: 15PX;
+    
     font-size: 1.3em;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.fastdev
+.formationtitresoutitre
 {   
     display: flex;
     flex-direction: column;
@@ -406,7 +398,7 @@ section
     width: auto;
 }
     
-.ammeil
+.nomprenom
 {  
    display: flex;
    flex-direction: column;
@@ -438,7 +430,7 @@ section
 
 .competence2, .textcompetence2
 {  
-    margin-left: 40PX;
+    
     width: 470px;
 }
 
@@ -452,21 +444,14 @@ section
 }    
 
 
-.opendev
-{  
-    margin-left: 20px;
-}
-
-.html, .java, .node, .mongodb, .express, .langage, .vuejs, .textcompetence, .competence
-{  
-    margin-left: 50px;
-}
-
 } 
 
-@media all and (max-width: 1060px)
+@media all and (max-width: 1160px)
 { 
-
+header
+{  
+    padding: 0;
+}
 
 
 #toutelessections
@@ -514,7 +499,7 @@ section h2
  {  
      text-align: left;
  }
-.textexper
+.formationcompetence
 {  
     width: 700px;
 }
@@ -532,7 +517,7 @@ section h2
     width: 600px;
 }
 
-.textexper
+.formationcompetence
 { 
     width: 600px;
 }
@@ -562,7 +547,7 @@ section h2
 { 
     width: 500px;
 }
-.textexper
+.formationcompetence
 {  
     width: 500px;
 }
@@ -573,7 +558,7 @@ section h2
 
 @media all and (max-width:650px)
 {  
-.textexper
+.formationcompetence
 {  
 width: 400px;
 }
@@ -589,7 +574,7 @@ width: 400px;
 
 .textcompetence, .textcompetence2
 {  
-    margin-left: 50PX;
+    
     width: 470;
 }
 { 
@@ -617,7 +602,7 @@ width: 400px;
     }
     .competence2, .textcompetence2
     {  
-        margin-left: 40PX;
+       
         width: auto;
     }
     
@@ -629,7 +614,7 @@ width: 400px;
 @media all and (max-width:510px)
 {  
     
-.textexper    
+.formationcompetence    
 {   
    width: 400px;
 }
@@ -668,15 +653,7 @@ section h2
 
 }
 
-@media all and (max-width:470px)
-{   
 
-.open
-{  
-    width: 120px;
-}
-
-}
 @media all and (max-width:470px)
 {  
     .competence
@@ -684,7 +661,7 @@ section h2
         width: 100px;
     }
 
-  .textexper
+  .formationcompetence
   {  
       width: 320px;
   } 
@@ -702,15 +679,9 @@ section h2
     width: 220px;
 }
 
-  .opendev
-  {  
-      margin-left: 10px;
-  } 
-  .html, .java, .node, .mongodb, .express, .langage, .vuejs, .textcompetence, .competence
-  {  
-    margin-left: 40px;
-  }
-  .amsoustitre
+  
+ 
+  .nomprenomsoutitre
   {  
       padding: 0%;
       margin: 0;
@@ -727,12 +698,12 @@ section h2
 
 @media all and (max-width:380px)
 {  
- .ammeil
+ .nomprenom
  {  
-     font-size: 2.6em ;
+     font-size: 2.2em ;
  }   
 
- .textexperiencepro, .textexper
+ .textexperiencepro, .formationcompetence
 {  
     width: 280px;
 }
