--- a/CValexsite/cvsitealexcss.css
+++ b/CValexsite/cvsitealexcss.css
@@ -190,7 +190,6 @@ section h2
     font-size: 2em;
     display: flex;
     flex-direction: row;
-    justify-content: ;
     padding: 10px 40px 0 0;
 }
 
@@ -338,7 +337,7 @@ section h2
     margin-top: 3PX;
     display: flex;
     flex-direction: column;
-    font-size: 1.2 em;
+    font-size: 1.2em;
 }
 
 .iconeexperiencepro
@@ -352,7 +351,7 @@ section h2
 .nicolas
 {   
     color:rgb(43, 41, 41);
-    font-size: 1.5 em;
+    font-size: 1.5em;
     font-family: Arial, Helvetica, sans-serif;
     margin-bottom: 10px;
 }
@@ -360,14 +359,14 @@ section h2
 .directeur, .telephone, .email
 {   
     color:rgb(92, 88, 88);
-    font-size: 1.3 em;
+    font-size: 1.3em;
 }
 
 .formationcompetence
 {  
     width: 530PX;
     text-align: justify;
-    
+    margin-left: 15px;
     font-size: 1.3em;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -573,20 +572,12 @@ width: 400px;
 }
 
 .textcompetence, .textcompetence2
-{  
-    
-    width: 470;
-}
+
 { 
     width: 400px;
     margin-bottom: 30px;
 }
 
-.textcompetence2
-{ 
-   width: 340px;
-
-}
 .h2text
 { 
     width: 150px;
@@ -595,20 +586,16 @@ width: 400px;
 
 @media all and (max-width:580px)
 {
-    section
+section
     {  
         
         padding: 5px;
     }
-    .competence2, .textcompetence2
+.competence2, .textcompetence2
     {  
        
         width: auto;
     }
-    
-
-
-
 }
 
 @media all and (max-width:510px)
