--- a/CValexsite/cvsitealexcss.css
+++ b/CValexsite/cvsitealexcss.css
@@ -69,6 +69,9 @@ h1
     margin-top: 50px;
     padding-bottom: 14px;
 }
+
+
+}
 .formationcompetence
 {  
     display: flex;
@@ -458,7 +461,9 @@ section
 }
 .sectiondroite
 {  
-    width:auto
+    width:auto;
+    padding:  0 0 0 60px;
+    
 }
 
 } 
@@ -607,6 +612,10 @@ width: 500px;
        
         width: auto;
     }
+.sectiondroite
+{   
+    padding: 0 0 0 10px;
+}    
 }
 
 @media all and (max-width:510px)
@@ -720,7 +729,7 @@ width: 500px;
 }
 .sectiondroite h2
 {   
-   font-size: 18px;
+   font-size: 17px;
 }
 
 
