--- a/CValexsite/cvsitealexcss.css
+++ b/CValexsite/cvsitealexcss.css
@@ -465,7 +465,10 @@ section
     padding:  0 0 0 60px;
     
 }
-
+.sectiondroite h2
+{  
+    width: auto;
+}
 } 
 
 @media all and (max-width: 1160px)
