--- a/CValexsite/cvsitealexcss.css
+++ b/CValexsite/cvsitealexcss.css
@@ -1,5 +1,5 @@
 
-.prenomj
+.prenom
 { 
     color: #FFCA28;
     
@@ -19,14 +19,14 @@ body
     margin:0;
 }
 
-.deve
+.developpeur
 {  
     border-bottom:2px #FFCA28 solid;
 }
 
 h1
 { 
-    border:1px white none;
+    
     text-aligN: left;
 }
 .soustitre
@@ -34,8 +34,7 @@ h1
     font-size: 1.2em;
     color: rgb(77, 74, 74);
     margin-bottom: 100px;
-    display: flex;
-    flex-direction: row;
+    
     height: 70px;
 }
 
@@ -154,16 +153,12 @@ h1
   color: rgb(92, 88, 88);
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.4em;
-  
+  display: flex;
+  flex-direction: column;
   
   
 }
-.sectionapropo
-{  
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-}
+
 
 .partiegauche
 { 
@@ -174,11 +169,15 @@ h1
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.4em;
     text-align: left;
-    display: flex;
-    flex-direction: column;
+    
     
 } 
-
+.sectionapropos
+{  
+    display: flex;
+   flex-direction: column;
+    flex-grow: 1;
+}
 
 .partiegauche h2
 { 
@@ -198,6 +197,7 @@ h1
     display: flex;
     flex-direction: row;
     padding: 10px 40px 0 0;
+    margin-left: 25px;
 }
 
 .nage, .altère, .livre 
@@ -388,17 +388,7 @@ h1
     
 }
 
-@media all and (max-width:1240px)
-{  
-    .textexperiencepro
-    {  
-        display: flex;
-        flex-direction: column;
-    }
 
-
-    
-}  
 
 @media all and (max-width:1200px)
 { 
@@ -427,7 +417,7 @@ section
     text-align: left;
 }
 
-.prenomj
+.prenom
 {  
     height: 60px;
 }
@@ -697,7 +687,7 @@ width: 500px;
   }
   .touteslesicone
   {  
-      margin-left: 0px;
+      margin-left: 25px;
   }
 
 
@@ -706,7 +696,7 @@ width: 500px;
 {   
 .sectiondroite h2
 {   
-   font-size: 21px;
+   width: auto;
 }
 
 }
@@ -732,7 +722,7 @@ width: 500px;
 }
 .sectiondroite h2
 {   
-   font-size: 17px;
+   width: auto;
 }
 
 
